@@ -12,15 +12,19 @@ OpenLDAP 2.3.20 Engineering
 	Added slapd syncrepl log messages (ITS#4369)
 	Added slapd permissive modify/increment support
 	Fixed slapd connectionless LDAP support
+	Fixed slapd cn=config error on create failure issue (ITS#4407)
 	Fixed slapd-bdb/hdb wake listener on runqueue submit (ITS#4385)
 	Fixed slapo-auditlog crash (ITS#4394)
 	Fixed slapo-accesslog unbind crash (ITS#4386)
 	Fixed slapo-syncprov update latency issue (ITS#4385)
 	Fixed slurpd reject error formating (ITS#4382)
+	Fixed ldappasswd unbind issue (ITS#4403)
 	Build Environment
 		Fixed liblunicode cross compiling problem (ITS#4363)
 		Updated <netinet/tcp.h> detection for AIX (ITS#4312)
 		Updated multi-precision library detection
+	Documentation
+		Updated misc. manual pages
 
 OpenLDAP 2.3.19 Release
 	Fixed libldap disable DH key exchange with DH params (ITS#4354)
